--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
 
 #root {
   font-family: 'Noto Sans', sans-serif;
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
