--- a/client/src/App.css
+++ b/client/src/App.css
@@ -84,7 +84,6 @@
   animation-delay: -5.6s;
 }
 
-
 .client-logo {
   filter: grayscale(100%);
   opacity: 63%;
@@ -97,8 +96,9 @@
 }
 
 /* NavBar & Header Styles */
+
 .nav-links:hover {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: "Playfair Display", sans-serif;
   font-weight: 600;
   font-style: italic;
 }
@@ -108,13 +108,55 @@
 }
 
 .brand-name {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: "Playfair Display", sans-serif;
   letter-spacing: 2.7px;
   font-style: italic;
 }
 
 .about-services {
-  font-family: 'Playfair Display', sans-serif;
+  font-family: "Playfair Display", sans-serif;
   letter-spacing: 2.7px;
   font-style: italic;
+}
+
+.canvas-three {
+  width: 100%;
+  height: 75vh;
+}
+
+/* Extra small devices (phones, 576px and down) */
+@media only screen and (max-width: 576px) {
+  /* CSS rules for extra small devices */
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media only screen and (min-width: 576px) {
+  /* CSS rules for small devices */
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  /* CSS rules for medium devices */
+}
+
+/* Large devices (desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+  /* CSS rules for large devices */
+  .header-container {
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    margin-top: 15rem;
+    font-size: 4rem;
+  }
+
+  .canvas-three{
+    height: 50dvh;
+  }
+
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  /* CSS rules for extra large devices */
 }
