--- a/client/src/App.css
+++ b/client/src/App.css
@@ -124,6 +124,116 @@
   height: 75vh;
 }
 
+/* Projects Section */
+.projects-wrapper {
+  width: 100%;
+  height: 72vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.project-container {
+  height: 400px;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+}
+
+.project-card {
+  width: 80px;
+  border-radius: 0.75rem;
+  background-size: cover;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 2rem;
+  margin: 0 10px;
+  display: flex;
+  align-items: flex-end;
+  transition: 0.6s cubic-bezier(0.28, -0.03, 0, 0.99);
+  box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+}
+
+.project-card > .project-row {
+  color: white;
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.project-card > .project-row > .project-icon {
+  background: #223;
+  color: white;
+  border-radius: 50%;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px;
+}
+
+.project-card > .project-row > .project-description {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  overflow: hidden;
+  height: 80px;
+  width: 520px;
+  opacity: 0;
+  transform: translateY(30px);
+  transition-delay: 0.3s;
+  transition: all 0.3s ease;
+}
+
+.project-description p {
+  padding-top: 5px;
+  margin-bottom: 12px;
+  color: white;
+  stroke: #757575;
+  font-weight: 500;
+}
+
+.project-description h4 {
+  text-transform: uppercase;
+}
+
+input {
+  display: none;
+}
+
+input:checked + label {
+  width: 600px;
+}
+
+input:checked + label .project-description {
+  opacity: 1 !important;
+  transform: translateY(0) !important;
+}
+
+
+.project-card[for="p1"] {
+  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235976/9550722_221_f9dquv.jpg");
+}
+
+.project-card[for="p2"] {
+  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235973/900356_61340-OA9ERO-509_nldgre.jpg");
+}
+
+.project-card[for="p3"] {
+  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235972/8950656_10864_xc2ko9.jpg");
+}
+
+.project-card[for="p4"] {
+  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235967/6450103_3175719_foxxlk.jpg");
+}
+
+.project-card[for="p5"] {
+  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235978/1014359_OJB0D50_dy4rji.jpg");
+}
+
+.project-card[for="p6"] {
+  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235988/35428959_stationery_mavec_18_v9cex7.jpg");
+}
+
 /* Extra small devices (phones, 576px and down) */
 @media only screen and (max-width: 576px) {
   /* CSS rules for extra small devices */
@@ -162,10 +272,9 @@
     font-size: 4rem;
   }
 
-  .canvas-three{
+  .canvas-three {
     height: 50dvh;
   }
-
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
