--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,7 +37,7 @@
   }
 }
 
-.card {
+.about-card {
   padding: 2em;
 }
 
@@ -133,389 +133,180 @@
   width: 100vw;
 }
 
-/* Projects Section */
-.projects-wrapper {
-  width: 100%;
-  height: 72vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+/* Team Section */
+.social-icon {
+  color: #4b5563;
+  transition: color 0.3s ease;
 }
 
-.project-container {
-  height: 400px;
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-}
-
-.project-card {
-  width: 80px;
-  border-radius: 0.75rem;
-  background-size: cover;
+.social-icon:hover {
+  color: #000;
   cursor: pointer;
-  overflow: hidden;
-  border-radius: 2rem;
-  margin: 0 10px;
-  display: flex;
-  align-items: flex-end;
-  transition: 0.6s cubic-bezier(0.28, -0.03, 0, 0.99);
-  box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
 }
 
-.project-card > .project-row {
-  color: white;
-  display: flex;
-  flex-wrap: nowrap;
-}
-
-.project-card > .project-row > .project-icon {
-  background: #223;
-  color: white;
-  border-radius: 50%;
-  width: 50px;
+/* Top Projects Section */
+.container {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 15px;
-}
-
-.project-card > .project-row > .project-description {
-  display: flex;
-  justify-content: center;
   flex-direction: column;
-  overflow: hidden;
-  height: 80px;
-  width: 520px;
-  opacity: 0;
-  transform: translateY(30px);
-  transition-delay: 0.3s;
-  transition: all 0.3s ease;
 }
-
-.project-description p {
-  padding-top: 5px;
-  margin-bottom: 12px;
-  color: white;
-  stroke: #757575;
-  font-weight: 500;
-}
-
-.project-description h4 {
-  text-transform: uppercase;
-}
-
-input {
-  display: none;
-}
-
-input:checked + label {
-  width: 600px;
-}
-
-input:checked + label .project-description {
-  opacity: 1 !important;
-  transform: translateY(0) !important;
-}
-
-.project-card[for="p1"] {
-  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1709102674/Top_projects_600_x_400-02_d4itiv.png");
-}
-
-.project-card[for="p2"] {
-  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1709102667/Top_projects_600_x_400-03_azqxcn.png");
-}
-
-.project-card[for="p3"] {
-  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235972/8950656_10864_xc2ko9.jpg");
-}
-
-.project-card[for="p4"] {
-  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235967/6450103_3175719_foxxlk.jpg");
-}
-
-.project-card[for="p5"] {
-  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235978/1014359_OJB0D50_dy4rji.jpg");
-}
-
-.project-card[for="p6"] {
-  background-image: url("https://res.cloudinary.com/dltjv8zbh/image/upload/v1707235988/35428959_stationery_mavec_18_v9cex7.jpg");
-}
-
-/* Projects Section */
-.card-movie__details-list:after,
-.card-movie__details:after {
-  clear: both;
-  content: "";
-  display: table;
-}
-
-.card-movie-wrapper {
-  box-shadow: 0px 0px 100px 25px rgba(0, 0, 0, 0.2);
-  height: 440px;
-  position: -webkit-sticky;
-  width: 840px;
-}
-.card-movie-wrapper:hover .card-movie-carousel {
-  -webkit-transition: all 250ms ease-in-out;
-  -moz-transition: all 250ms ease-in-out;
-  transition: all 250ms ease-in-out;
-  bottom: 60px;
-  right: 40px;
-}
-
-.card-movie-wrapper--centered {
+.container .card {
   position: relative;
-  margin: 0 auto;
-}
-
-.card-movie-carousel {
-  -webkit-transition: all 250ms ease-in-out 250ms;
-  -moz-transition: all 250ms ease-in-out 250ms;
-  transition: all 250ms ease-in-out 250ms;
-  height: 440px;
-  width: 840px;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  overflow: hidden;
-}
-
-.card-movie-navigation {
+  width: 700px;
+  height: 300px;
   background-color: #fff;
-  bottom: 0;
-  height: 100%;
   overflow: hidden;
-  position: absolute;
-  right: 0;
-  width: 100%;
-  /* z-index: 0; */
+  margin-bottom: 4px;
 }
-.card-movie-navigation__list {
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  position: absolute;
-  right: 14px;
-  top: 50%;
-  width: 18px;
-}
-.card-movie-navigation__list li {
-  -webkit-transition: all 250ms ease-in-out;
-  -moz-transition: all 250ms ease-in-out;
-  transition: all 250ms ease-in-out;
-  background-color: #ccc;
-  border-radius: 100%;
-  cursor: pointer;
-  height: 12px;
-  margin: 0 auto 6px;
-  width: 12px;
-}
-.card-movie-navigation__list li:last-child {
-  margin-bottom: 0;
-}
-.card-movie-navigation__list li.is-active {
-  height: 18px;
-  width: 18px;
-}
-.card-movie-navigation__list li:hover {
-  background-color: #bbb;
-}
-.card-movie-navigation button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-color: transparent;
-  border: none;
-  bottom: 0;
-  color: #aac8ca;
-  cursor: pointer;
-  font-size: 14px;
-  line-height: 60px;
-  margin: 0;
-  outline: none;
-  padding: 0;
-  position: absolute;
-  right: 40px;
-}
-.card-movie-navigation button:before {
-  content: "Watch Trailer";
-}
-.card-movie-navigation button:after {
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  border-bottom: 6px solid transparent;
-  border-left: 6px solid #dce9e9;
-  border-top: 6px solid transparent;
+.container .card:before {
   content: "";
-  height: 0;
-  margin-right: 6px;
+  z-index: 99;
   position: absolute;
-  right: 100%;
-  top: 50%;
-  width: 0;
+  top: -10px;
+  left: 32px;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border-radius: 16px;
+  background-color: #e6e5e1;
 }
-.card-movie-navigation button.is-playing:before {
-  content: "Hide Trailer";
+.container .card:after {
+  content: "";
+  z-index: 99;
+  position: absolute;
+  bottom: -10px;
+  left: 32px;
+  display: block;
+  width: 16px;
+  height: 16px;
+  border-radius: 16px;
+  background-color: #e6e5e1;
 }
-.card-movie-navigation button.is-playing:after {
-  -webkit-transform: rotate(-90deg);
-  -moz-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  -o-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  margin-top: -6px;
+.container .card ul {
+  z-index: 99;
+  position: absolute;
+  left: 39px;
+  top: 5px;
+  list-style-type: none;
 }
-
-.card-movie {
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-  background-size: cover;
+.container .card ul li {
+  width: 2px;
+  height: 2px;
+  border-radius: 2px;
+  margin: 6px 0;
+  background-color: #e6e5e1;
+}
+.container .card h2 {
+  z-index: 1;
+  font-family: "Poppins", sans-serif;
+  position: absolute;
   bottom: 0;
-  height: 100%;
-  overflow: hidden;
-  position: absolute;
-  right: 0;
-  opacity: 0;
-  width: 100%;
-  z-index: 0;
-}
-.card-movie__content {
-  left: 330px;
-  position: absolute;
-  top: 150px;
-}
-.card-movie__title {
+  float: left;
+  padding-left: 5%;
   font-size: 60px;
   font-weight: 700;
-  line-height: 1;
-  margin-left: -4px;
-  text-transform: uppercase;
+  color: #f2f2f2;
 }
-.card-movie__details {
-  margin-bottom: 30px;
-  margin-top: 15px;
-}
-.card-movie__details-item {
-  display: block;
-  float: left;
-  margin-right: 20px;
-}
-.card-movie__details-list li {
-  float: left;
-  margin-right: 5px;
-  padding-right: 6px;
-  position: relative;
-}
-.card-movie__details-list li:after {
-  content: "|";
+.container .card .fa-arrow-right {
+  z-index: 1;
   position: absolute;
-  right: 0;
+  right: 75px;
+  bottom: 25px;
+  font-size: 40px;
+  cursor: pointer;
 }
-.card-movie__details-list li:last-child {
-  margin-right: 0;
-}
-.card-movie__details-list li:last-child:after {
-  display: none;
-}
-.card-movie__description {
-  font-size: 14px;
-  max-width: 390px;
-}
-.card-movie__rating {
-  bottom: 16.6666666667px;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 50px;
+.container .card p {
+  z-index: 99;
   position: absolute;
-  right: 16.6666666667px;
-  text-align: center;
-  width: 50px;
+  top: 20px;
+  right: 70px;
+  color: #333;
+  opacity: 0.7;
+  font-size: 12px;
+  letter-spacing: 1px;
+  writing-mode: vertical-lr;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
 }
-.card-movie__rating:after {
-  border-radius: 100%;
-  border: 2px solid #ee927b;
-  content: "";
-  height: 100%;
-  left: 0;
+.container .card .pic {
+  z-index: 100;
+  width: 700px;
+  height: 300px;
+  background-size: cover;
+  filter: grayscale(100%);
+}
+.container .card .social {
   position: absolute;
+  left: 60px;
   top: 0;
-  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  width: 180px;
+  height: 64px;
+  border-radius: 80px;
 }
-.card-movie__player {
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  height: 0;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  width: 0;
-  z-index: 0;
+.container .card .social i:nth-of-type(1) {
+  -webkit-transition-delay: 0.4s;
+  transition-delay: 0.4s;
 }
-.card-movie--playing .card-movie__player {
-  height: 440px;
-  width: 840px;
+.container .card .social i:nth-of-type(2) {
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
 }
-.card-movie__player iframe {
-  height: 100%;
-  width: 100%;
+.container .card .social i:nth-of-type(3) {
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
 }
-
-.card-movie--active {
+.container .card .social i:nth-of-type(4) {
+  -webkit-transition-delay: 0.1s;
+  transition-delay: 0.1s;
+}
+.container .card:hover i {
   opacity: 1;
-  z-index: 5;
+  -webkit-transform: scale(1);
+  transform: scale(1);
 }
-
-.card-movie--light {
-  background-color: #effdfd;
+.container .card button {
+  position: absolute;
+  right: 14px;
+  bottom: 14px;
+  width: 30px;
+  height: 30px;
+  background-color: #f2f2f2;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
+  mix-blend-mode: hard-light;
 }
-.card-movie--light [class*="__title"] {
-  color: #000;
+.container .card button i {
+  font-size: 3rem;
 }
-
-.card-movie--dark {
-  background-color: #000;
+.container .card:hover button {
+  transform: scale(16.5);
+}
+.container .card:hover p {
   color: #fff;
 }
-.card-movie--dark [class*="__title"] {
-  color: #fff;
+.container .card:hover .pic {
+  filter: grayscale(0);
 }
 
-.card-movie--looper {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/looper.png");
-}
-
-.card-movie--tron {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/tron.png");
-}
-
-.card-movie--interstellar {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/interstellar.png");
-  background-color: #fffffa;
-}
-
-.card-movie--garden-state {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/garden-state.png");
-}
-
-.card-movie--walter-mitty {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/walter-mitty.png");
-}
-
-.card-movie--cloud-atlas {
-  background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/43525/cloud-atlas.png");
+.dr {
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+  width: 100px;
 }
 
 /* Footer */
@@ -535,7 +326,7 @@ input[type="radio"] {
   margin-bottom: 20px;
 }
 
-.card {
+.about-card {
   position: absolute;
   width: 50%;
   left: 0;
@@ -545,7 +336,8 @@ input[type="radio"] {
   cursor: pointer;
 }
 
-.container {
+/* Contact Form */
+.contact-container {
   width: 100%;
   max-width: 800px;
   max-height: 600px;
@@ -639,16 +431,6 @@ img {
   .form-card {
     width: 60vw;
   }
-  .card-movie-wrapper {
-    height: 50vh;
-    width: 80vw;
-  }
-  
-  .card-movie-carousel {
-    height: 50vh;
-    width: 80vw;
-  }
-
 }
 
 /* Extra large devices (large desktops, 1200px and up) */
