--- a/client/src/App.css
+++ b/client/src/App.css
@@ -145,168 +145,147 @@
 }
 
 /* Top Projects Section */
-.container {
+
+/* DEFAULT STYLE */
+:root {
+  font-size: 16px;
+  --card-img-height: 200px;
+}
+
+.card-container {
   width: 100%;
-  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  transition: all 200ms ease-in-out;
+}
+
+.project-card {
+  align-self: flex-start;
+  position: relative;
+  width: 325px;
+  min-width: 275px;
+  margin: 1.25rem 0.75rem;
+  background: white;
+  transition: all 300ms ease-in-out;
+}
+.project-card .card-img {
+  visibility: hidden;
+  width: 100%;
+  height: var(--card-img-height);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+.project-card .card-img-hovered {
+  --card-img-hovered-overlay: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0)
+  );
+  transition: all 350ms ease-in-out;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  width: 100%;
+  position: absolute;
+  height: var(--card-img-height);
+  top: 0;
+}
+.project-card .card-info {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  transition: all 200ms ease-in-out;
+}
+.project-card .card-info .card-about {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  padding: 0.75rem 0;
+  transition: all 200ms ease-in-out;
 }
-.container .card {
-  position: relative;
-  width: 700px;
-  height: 300px;
-  background-color: #fff;
-  overflow: hidden;
-  margin-bottom: 4px;
-}
-.container .card:before {
-  content: "";
-  z-index: 99;
-  position: absolute;
-  top: -10px;
-  left: 32px;
-  display: block;
-  width: 16px;
-  height: 16px;
-  border-radius: 16px;
-  background-color: #e6e5e1;
-}
-.container .card:after {
-  content: "";
-  z-index: 99;
-  position: absolute;
-  bottom: -10px;
-  left: 32px;
-  display: block;
-  width: 16px;
-  height: 16px;
-  border-radius: 16px;
-  background-color: #e6e5e1;
-}
-.container .card ul {
-  z-index: 99;
-  position: absolute;
-  left: 39px;
-  top: 5px;
-  list-style-type: none;
-}
-.container .card ul li {
-  width: 2px;
-  height: 2px;
-  border-radius: 2px;
-  margin: 6px 0;
-  background-color: #e6e5e1;
-}
-.container .card h2 {
-  z-index: 1;
-  font-family: "Poppins", sans-serif;
-  position: absolute;
-  bottom: 0;
-  float: left;
-  padding-left: 5%;
-  font-size: 60px;
-  font-weight: 700;
-  color: #f2f2f2;
-}
-.container .card .fa-arrow-right {
-  z-index: 1;
-  position: absolute;
-  right: 75px;
-  bottom: 25px;
-  font-size: 40px;
-  cursor: pointer;
-}
-.container .card p {
-  z-index: 99;
-  position: absolute;
-  top: 20px;
-  right: 70px;
-  color: #333;
-  opacity: 0.7;
+.project-card .card-info .card-about .card-tag {
+  width: 150px;
+  max-width: 15 0px;
+  padding: 0.2rem 0.5rem;
+  border-radius: 9px;
   font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
   letter-spacing: 1px;
-  writing-mode: vertical-lr;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-.container .card .pic {
-  z-index: 100;
-  width: 700px;
-  height: 300px;
-  background-size: cover;
-  filter: grayscale(100%);
-}
-.container .card .social {
-  position: absolute;
-  left: 60px;
-  top: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  width: 180px;
-  height: 64px;
-  border-radius: 80px;
-}
-.container .card .social i:nth-of-type(1) {
-  -webkit-transition-delay: 0.4s;
-  transition-delay: 0.4s;
-}
-.container .card .social i:nth-of-type(2) {
-  -webkit-transition-delay: 0.3s;
-  transition-delay: 0.3s;
-}
-.container .card .social i:nth-of-type(3) {
-  -webkit-transition-delay: 0.2s;
-  transition-delay: 0.2s;
-}
-.container .card .social i:nth-of-type(4) {
-  -webkit-transition-delay: 0.1s;
-  transition-delay: 0.1s;
-}
-.container .card:hover i {
-  opacity: 1;
-  -webkit-transform: scale(1);
-  transform: scale(1);
-}
-.container .card button {
-  position: absolute;
-  right: 14px;
-  bottom: 14px;
-  width: 30px;
-  height: 30px;
-  background-color: #f2f2f2;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-  outline: none;
-  transition: all 0.3s ease;
-  mix-blend-mode: hard-light;
-}
-.container .card button i {
-  font-size: 3rem;
-}
-.container .card:hover button {
-  transform: scale(16.5);
-}
-.container .card:hover p {
+  background: #505f79;
   color: #fff;
 }
-.container .card:hover .pic {
-  filter: grayscale(0);
+.project-card .card-info .card-about .card-tag.tag-news {
+  background: #333;
+}
+.project-card .card-info .card-about .card-tag.tag-deals {
+  background: #ffab00;
+}
+.project-card .card-info .card-about .card-tag.tag-politics {
+  width: 71px;
+  background: #ff5630;
+}
+.project-card .card-info .card-title {
+  z-index: 10;
+  font-size: 1.5rem;
+  font-family: "Playfair Display", sans-serif;
+  font-weight: 600;
+  padding-bottom: 0.75rem;
+  transition: all 350ms ease-in-out;
+}
+.project-card .card-info .card-creator {
+  padding-bottom: 0.75rem;
+  transition: all 250ms ease-in-out;
+}
+.project-card:hover {
+  cursor: pointer;
+  box-shadow: 0px 15px 35px rgba(227, 252, 239, 0.1),
+    0px 5px 15px rgba(0, 0, 0, 0.07);
+  transform: scale(1.025);
+}
+.project-card:hover .card-img-hovered {
+  --card-img-hovered-overlay: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.65)
+  );
+  height: 100%;
+}
+.project-card:hover .card-about,
+.project-card:hover .card-creator {
+  opacity: 0;
+}
+.project-card:hover .card-info {
+  background-color: transparent;
+}
+.project-card:hover .card-title {
+  color: #ebecf0;
+  transform: translate(0, 40px);
 }
 
-.dr {
-  position: absolute;
-  bottom: 16px;
-  right: 16px;
-  width: 100px;
+.card-1 .card-img,
+.card-1 .card-img-hovered {
+  background-image: var(--card-img-hovered-overlay);
+}
+
+.card-2 .card-img,
+.card-2 .card-img-hovered {
+  background-image: var(--card-img-hovered-overlay),
+    url(https://source.unsplash.com/C-v1p2DTakA);
+}
+
+.card-3 .card-img,
+.card-3 .card-img-hovered {
+  background-image: var(--card-img-hovered-overlay),
+    url(https://source.unsplash.com/V0L1LH7qWOQ);
+}
+
+.card-4 .card-img,
+.card-4 .card-img-hovered {
+  background-image: var(--card-img-hovered-overlay),
+    url(https://source.unsplash.com/zAi2Is48-MA);
 }
 
 /* Footer */
