--- a/client/src/App.css
+++ b/client/src/App.css
@@ -150,7 +150,7 @@
   flex-wrap: wrap;
   width: 100%;
   overflow: hidden;
-  max-width: 1300px;
+  max-width: 1200px;
   margin: auto;
 }
 .gallery__strip {
@@ -202,7 +202,7 @@
 }
 .photo__image img {
   width: 90%;
-  transform: translateX(30%);
+  transform: translateX(5%);
   transition: 1s cubic-bezier(0.19, 1, 0.22, 1) 0.2s;
 }
 .photo__name {
@@ -366,6 +366,10 @@ img {
 
   .form-card {
     width: 60vw;
+  }
+
+  .gallery {
+    width: 75%;
   }
 }
 
